WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282467
Unreviewed WatchOS build fix after
286021@main
https://bugs.webkit.org/show_bug.cgi?id=282467
Summary
Unreviewed WatchOS build fix after 286021@main
Chris Dumez
Reported
2024-11-01 15:02:57 PDT
WatchOS build fix after
286021@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-01 15:03:19 PDT
<
rdar://problem/139097239
>
Chris Dumez
Comment 2
2024-11-01 15:04:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/36066
EWS
Comment 3
2024-11-01 15:42:47 PDT
Committed
286029@main
(93f78b653ee3): <
https://commits.webkit.org/286029@main
> Reviewed commits have been landed. Closing PR #36066 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug