Unreviewed WatchOS build fix after 286021@main https://bugs.webkit.org/show_bug.cgi?id=282467 rdar://139097239

* Source/WebKit/UIProcess/_WKTouchEventGenerator.mm:

Canonical link: https://commits.webkit.org/286029@main